[package]
name = "gridballs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.9.1" release!! 
bevy = { version = "0.9.0", features = ["dynamic","wayland"] } # for fast build developing!
bevy-inspector-egui = "0.17.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

