[package]
name = "gridballs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.9.1" release!! 
bevy = { version = "0.10.0", features = ["dynamic_linking","wayland"] } # for fast build developing!
bevy-inspector-egui = "0.18.0" # TODO bump > 0.18.1
bevy_prototype_debug_lines = "0.10.1"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

